--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" href="https://cdn2.steamgriddb.com/icon/1387a00f03b4b423e63127b08c261bdc/32/256x256.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+	<meta
+		name="icon"
+		href="https://cdn2.steamgriddb.com/icon/1387a00f03b4b423e63127b08c261bdc/32/256x256.png"
+	>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React R6 Randomizer App"
     />
     <link rel="apple-touch-icon" href="https://cdn2.steamgriddb.com/icon/1387a00f03b4b423e63127b08c261bdc/32/256x256.png" />
     <!--
